32-aws-eks-ecomm-2-istio/istio-deloyment/shoppingportal-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shoppingportal-gateway
  namespace: shoppingportal  
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
     - "*"
  - port:
      number: 15032
      name: http-port
      protocol: HTTP
    hosts:
     - "*"
